--- a/app/public/css/style.css
+++ b/app/public/css/style.css
@@ -15,6 +15,7 @@ body {
 /* IE10+ */
   background: radial-gradient(center, ellipse cover, #f2f9fe 0%, #d6f0fd 100%);
 /* W3C */
+  background: #8b1c1c;
 }
 #login-container {
   width: 340px;
