--- a/app/public/css/style.styl
+++ b/app/public/css/style.styl
@@ -15,7 +15,8 @@ body
 	background -o-radial-gradient(center, ellipse cover,  rgba(242,249,254,1) 0%,rgba(214,240,253,1) 100%) /* Opera 12+ */
 	background -ms-radial-gradient(center, ellipse cover,  rgba(242,249,254,1) 0%,rgba(214,240,253,1) 100%) /* IE10+ */
 	background radial-gradient(center, ellipse cover,  rgba(242,249,254,1) 0%,rgba(214,240,253,1) 100%) /* W3C */
-	
+	background #8b1c1c;
+
 // login form //
     
 #login-container{
