--- a/app/server/views/404.jade
+++ b/app/server/views/404.jade
@@ -2,4 +2,7 @@
 extends layout
 
 block content
-	#four04(class="lead") I'm sorry, the page or resource you are searching for is currently unavailable.
+	div(class="container")
+		#four04(class="lead") I'm sorry, the page or resource you are searching for is currently unavailable.
+		//- img(src="/img/404_why_u_no_found.jpg", alt="404 Image", style="margin:auto auto;")
+		<iframe width="640" height="360" src="//www.youtube.com/embed/hXUwWljkNAI" frameborder="0" allowfullscreen></iframe>
