Minor upgrades throughout, including fixing top offset when having navigation bar.

--- a/app/public/css/style.css
+++ b/app/public/css/style.css
@@ -6,8 +6,23 @@ body {
   background-image: url("/img/brushed/brushed.png");
   background-repeat: repeat;
 }
+#github-banner {
+  position: absolute;
+  top: 0px;
+  right: 0;
+  border: 0;
+}
+body.hasNavigation {
+  padding-top: 40px;
+}
+body.hasNavigation #github-banner {
+  top: 40px;
+}
 h1 {
   color: #8b1c1c;
+}
+#global-nav li a {
+  color: #fff;
 }
 #login-container {
   width: 340px;
