--- a/app/public/css/style.styl
+++ b/app/public/css/style.styl
@@ -19,8 +19,22 @@ body
 	background-image url("/img/brushed/brushed.png") 
 	background-repeat: repeat;
 
+#github-banner
+	position:absolute;
+	top:0px;
+	right:0;
+	border:0;
+
+body.hasNavigation
+	padding-top 40px
+body.hasNavigation #github-banner
+	top:40px
+
+
 h1
 	color #8b1c1c;
+#global-nav li a
+	color white // #8b1c1c;
 
 // login form //
     
