--- a/app/server/views/account_settings.jade
+++ b/app/server/views/account_settings.jade
@@ -3,9 +3,9 @@ extends layout_nav
 
 block content
 	include navbar
-	//-include account
-	//-include modals/alert
-	//-include modals/confirm
+	include account
+	include modals/alert
+	include modals/confirm
 
 block scripts
 	script(src='/vendor/jquery.min.js')
