--- a/app/server/views/courses.jade
+++ b/app/server/views/courses.jade
@@ -1,7 +1,9 @@
 
-extends layout
+extends layout_nav
 
 block content
+	include navbar
+
 	div.container(style='margin:20px')
 		table.table.table-bordered.table-striped
 			thead
