--- a/app/server/views/login.jade
+++ b/app/server/views/login.jade
@@ -4,7 +4,7 @@ extends layout
 block content
 	#login-container
 		form( method="post")#login-form.well.span4
-			h1 Hello!
+			h1 Welcome to SMUCS!
 			p.subheading Please Login To Your Account
 			label Username 
 			input(type="text", name="user", id='user-tf').span4.required
