--- a/app/server/views/layout_nav.jade
+++ b/app/server/views/layout_nav.jade
@@ -4,7 +4,7 @@ html
 		title SMUCS
 		link(rel='stylesheet', href='/vendor/bootstrap.min.css')
 		link(rel='stylesheet', href='/css/style.css')
-	body
+	body.hasNavigation
 		include github_banner
 	block content
 	block scripts
