Improved UI, such as navbar.

--- a/app/server/views/layout_nav.jade
+++ b/app/server/views/layout_nav.jade
@@ -6,5 +6,6 @@ html
 		link(rel='stylesheet', href='/css/style.css')
 	body.hasNavigation
 		include github_banner
+		include navbar
 	block content
 	block scripts
