--- a/app/server/views/navbar.jade
+++ b/app/server/views/navbar.jade
@@ -11,9 +11,13 @@ div.navbar.navbar-fixed-top
 				li
 					a(href="/print") Users
 
-			a.btn.btn-info(href="/account")
-				| Account
+			a.btn.btn-warn(href="https://github.com/Glavin001/smucs/issues", target="_blank")
+				| Issues
 
-			button#btn-logout.btn.btn-primary
-				i.icon-lock.icon-white
-				| Sign Out
+			span.pull-right
+				a.btn.btn-info(href="/account")
+					| Account
+
+				button.btn.btn-primary
+					i.icon-lock.icon-white
+					| Sign Out
