--- a/app/public/css/style.styl
+++ b/app/public/css/style.styl
@@ -30,11 +30,14 @@ body.hasNavigation
 body.hasNavigation #github-banner
 	top:40px
 
-
 h1
 	color #8b1c1c;
 #global-nav li a
 	color white // #8b1c1c;
+
+.navbar #global-nav li a.brand
+	color #8b1c1c;
+	font-weight bold;
 
 // login form //
     
@@ -117,9 +120,9 @@ h1
     
 #btn-logout
 	width 100px
-	top 1px
-	right 8px
-	position absolute
+	// top 1px //
+	// right 8px //
+	// position absolute //
 	 
 // support pages //
 
