--- a/app/server/views/home.jade
+++ b/app/server/views/home.jade
@@ -5,6 +5,11 @@ block content
 	//-include account
 	//-include modals/alert
 	//-include modals/confirm
+	div.container
+		br
+		div.well
+			h1 	Welcome to SMU CS
+			p 	Feel free to browser around.
 
 block scripts
 	script(src='/vendor/jquery.min.js')
