--- a/app/server/views/navbar.jade
+++ b/app/server/views/navbar.jade
@@ -11,13 +11,16 @@ div.navbar.navbar-fixed-top
 				li
 					a(href="/print") Users
 
-			a.btn.btn-warn(href="https://github.com/Glavin001/smucs/issues", target="_blank")
+			a.btn.btn-warning(href="https://github.com/Glavin001/smucs/issues", target="_blank")
 				| Issues
+
+			a.btn.btn-success(href="http://140.184.132.237:8123", target="_blank")
+				| GitlabHQ
 
 			span.pull-right
 				a.btn.btn-info(href="/account")
 					| Account
 
-				button.btn.btn-primary
+				button#btn-logout.btn.btn-primary
 					i.icon-lock.icon-white
 					| Sign Out
