--- a/app/server/views/layout_nav.jade
+++ b/app/server/views/layout_nav.jade
@@ -1,7 +1,7 @@
 !!! 5
 html
 	head
-		title SMUCS
+		title #{title}
 		link(rel='stylesheet', href='/vendor/bootstrap.min.css')
 		link(rel='stylesheet', href='/css/style.css')
 	body.hasNavigation
@@ -17,13 +17,10 @@ html
 	script(src='/vendor/bootstrap-modal.js')
 	script(src='/vendor/bootstrap-transition.js')
 	//- GoInstant
-	script(src='https://cdn.goinstant.net/v1/platform.min.js')
-	//- GoInstant - User-List Widget
-	<script src="https://cdn.goinstant.net/widgets/user-list/latest/user-list.min.js"></script>
-	<link href="https://cdn.goinstant.net/widgets/user-list/latest/user-list.css" rel="stylesheet" type="text/css" />
-	script(src='/js/controllers/goinstant.js')
-	//- GoInstant - User-Colors Widget
-	<script type="text/javascript" src="https://cdn.goinstant.net/v1/platform.min.js"></script>
-	<script type="text/javascript" src="https://cdn.goinstant.net/widgets/user-colors/latest/user-colors.min.js"></script>
-
+	include goinstant
+	//- Socket.io
+	script(src="/socket.io/socket.io.js")	
+	//- Chat
+	include chat
+	
 	block scripts
