--- a/app/server/views/navbar.jade
+++ b/app/server/views/navbar.jade
@@ -9,7 +9,7 @@ div.navbar.navbar-fixed-top
 				li
 					a(href="/courses") Courses					
 				li
-					a(href="/print") Users
+					a(href="/users") Users
 
 			a.btn.btn-warning(href="https://github.com/Glavin001/smucs/issues", target="_blank")
 				| Issues
@@ -19,7 +19,7 @@ div.navbar.navbar-fixed-top
 
 			span.pull-right
 				a.btn.btn-info(href="/account")
-					| Account
+					| @ #{udata.name}
 
 				button#btn-logout.btn.btn-primary
 					i.icon-lock.icon-white
