--- a/app/public/css/chat.styl
+++ b/app/public/css/chat.styl
@@ -1,6 +1,43 @@
+div.chat.well {
+	bottom: 0px; 
+	position: absolute; 
+	right: 0px; 
+	width: 300px; 
+	margin-right: 5px; 
+	margin-bottom: 0px; 
+	padding:0px;	
+}
+
+.chat .header-bar.alert {
+	margin-bottom: 5px;
+}
+.chat .scroll-view {
+	overflow: scroll; 
+	height: 150px; 
+	margin-bottom: 0px; 
+	padding:0px; 
+}
+
+.chat .scroll-view ul {
+	list-style-type: none; 
+	padding-left: 0px; 
+	margin-left: 10px;
+}
+
+.chat .form {
+	margin-left: 10px;
+}
+
 .chat .user {
 	color: blue;
 }
 .chat .msg {
 	color: black;	
 }
+
+.chat.closed .scroll-view
+	height: 0px
+
+.chat.closed .form
+	height: 0px;
+	margin-bottom: 0px;
