Closes #20. Added link to forum.

--- a/app/server/views/navbar.jade
+++ b/app/server/views/navbar.jade
@@ -6,12 +6,16 @@ div.navbar.navbar-fixed-top
 					a(href='#').brand SMU CS
 				li
 					a(href="/home") Home
+				li 
+					a(href="http://140.184.132.237:4567/category/13", target="_blank") Events
 				li
 					a(href="/courses") Courses					
 				li
 					a(href="/users") Users
+				li
+					a(href="http://140.184.132.237:4567/", target="_blank") Forum
 
-			a.btn.btn-warning(href="https://github.com/Glavin001/smucs/issues", target="_blank")
+			a.btn.btn-danger(href="https://github.com/Glavin001/smucs/issues", target="_blank")
 				| Issues
 
 			a.btn.btn-success(href="http://140.184.132.237:8123", target="_blank")
