Closes #19. Sign out button triggers 'logging out' message, displays successfully logged out message, and finally redirects to login page.

--- a/app/server/views/home.jade
+++ b/app/server/views/home.jade
@@ -2,9 +2,6 @@
 extends layout_nav
 
 block content
-	//-include account
-	//-include modals/alert
-	//-include modals/confirm
 	div.container
 		br
 		div.well
@@ -12,7 +9,7 @@ block content
 			p 	Feel free to browser around.
 
 block scripts
-	script(src='/js/views/home.js')
-	script(src='/js/controllers/homeController.js')
-	script(src='/js/form-validators/accountValidator.js')
+	//-script(src='/js/views/home.js')
+	//-script(src='/js/controllers/homeController.js')
+	//-script(src='/js/form-validators/accountValidator.js')
 	
